modernize css class overlap bug fix

--- a/src/styles/forms-placeholder.css
+++ b/src/styles/forms-placeholder.css
@@ -1,3 +1,3 @@
-.placeholder {
+.forms-placeholder {
 	color:#999 !important;
 }
